--- a/src/styles/slide.css
+++ b/src/styles/slide.css
@@ -7,14 +7,14 @@
   }
   
   .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    height: 80px;
+   /*  text-align: center;
+    font-size: 18px; */
+   /*  background: #fff; */
+   /*  height: 80px; */
   
     /* Center slide text vertically */
     display: flex;
-    justify-content: center;
-    align-items: center;
+   /*  justify-content: center;
+    align-items: center; */
   }
   
